testData/src/error/Test.kt
/*
 * ©2009-2018 南京擎盾信息科技有限公司 All rights reserved.
 */
package error

/**
 *
 * @author 吴昊
 * @since
 */
class Test {

  fun test() {
  }

}

